--- a/C# Start.csproj
+++ b/C# Start.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>C__Start</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>desable</Nullable>
   </PropertyGroup>
 
 </Project>
